--- a/0x02-i18n/messages.pot
+++ b/0x02-i18n/messages.pot
@@ -1,21 +1,21 @@
 # Translations template for i18n.
-# Copyright (C) 2022 Meaza Lemma
-# This file is distributed under the same license as the i18n project.
-# Meaza Lemma  <meazalemma2020@gmail.com>, 2022.
+# Copyright (C) 2022 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: meazalemma2020@gmail.com\n"
-"POT-Creation-Date: 2022-07-19 03:39+0100\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2022-07-19 10:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Meaza Lemma <meazalemma2020@gmail.com>\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.10.1\n"
+"Generated-By: Babel 2.10.0\n"
 
 #: templates/3-index.html:6 templates/4-index.html:6
 msgid "home_title"
